--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
+server.port=9090
 spring.datasource.url=jdbc:h2:mem:tasksdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 server.servlet.contextPath=/tasks
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
